autapi/src/schema/impls/snapshots/autapi__schema__impls__arrays__tests__array_schema-2.snap
---
source: autapi/src/schema/impls/arrays.rs
expression: "LinkedList::<String>::schema(&mut Registry::default())"
---
{
  "type": "array",
  "items": {
    "type": "string"
  }
}
