autapi/src/schema/impls/snapshots/autapi__schema__impls__arrays__tests__array_schema-3.snap
---
source: autapi/src/schema/impls/arrays.rs
expression: "HashSet::<i64>::schema(&mut Registry::default())"
---
{
  "type": "array",
  "items": {
    "type": "integer",
    "format": "int64"
  }
}
