autapi/src/schema/impls/snapshots/autapi__schema__impls__arrays__tests__array_schema-4.snap
---
source: autapi/src/schema/impls/arrays.rs
expression: "SerdeAdapter(vec![1, 2, 3])"
---
[
  1,
  2,
  3
]
