autapi/src/schema/impls/snapshots/autapi__schema__impls__arrays__tests__array_schema-5.snap
---
source: autapi/src/schema/impls/arrays.rs
expression: "serde_json::from_value::<SerdeAdapter<LinkedList<String>>>(json!([\"this\",\n\"is\", \"a\", \"linked\", \"list\"]))"
---
Ok(
    SerdeAdapter(
        [
            "this",
            "is",
            "a",
            "linked",
            "list",
        ],
    ),
)
