autapi/src/schema/impls/snapshots/autapi__schema__impls__arrays__tests__array_schema.snap
---
source: autapi/src/schema/impls/arrays.rs
expression: "Vec::<bool>::schema(&mut Registry::default())"
---
{
  "type": "array",
  "items": {
    "type": "boolean"
  }
}
